# mcp-prompt-server

./: .gitignore  README.md  SKILL.md  main.py  package-lock.json  package.json  pyproject.toml  tsconfig.json
prompts/: prompt-2026-03-09T20-08-45-330Z.txt  test.txt
src/: index.ts
src/test/suite/: index.test.ts
tests/: test_server.py
